Updated primary and secondary color variables

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 :root {
     --heading-font: "Inria Serif", serif;
     --default-font: "Inter Tight", sans-serif;
-    --primary-color: #f9f7fe;
-    --secondary-color: #272142;
+    --primary-color: #F1ECE6;
+    --secondary-color: #A48374;
     
 }
 body {
